--- a/Mahara/playbook.yml
+++ b/Mahara/playbook.yml
@@ -61,20 +61,25 @@
     become_method: sudo    
     apt: name=php-gd state=latest
 
-#  - name: creates directory
-#    file:
-#    path: /tmp/mahara
-#    state: directory
- 
-#  - name: Download mahara-19.10.2.tar.gz
-#    get_url:
-#    url: https://launchpad.net/mahara/19.10/19.10.2/+download/mahara-19.10.2.tar.gz
-#    dest: /tmp/mahara
+  - name: Download mahara-19.10.2.tar.gz
+    get_url:
+    url: https://launchpad.net/mahara/19.10/19.10.2/+download/mahara-19.10.2.tar.gz
+    dest: /tmp/
 
   - name: cp mahara
     become: yes
     become_method: sudo
-    shell: "cp -r /tmp/mahara /var/www"
+    shell: "tar xvzf /tmp/mahara-19.10.2.tar.gz"
+
+  - name: cp tmpmahara
+    become: yes
+    become_method: sudo
+    shell: "mv mahara-19.10.2 /tmp/mahara"
+
+  - name: cp maharawww
+    become: yes
+    become_method: sudo
+    shell: "cp -R /tmp/mahara /var/www"
 
   - name: passwd mysql
     copy: src=script.sql dest=/tmp/
